#NAT-138 - corrected enum selection on detail pages for deficiencies. Danger state can be changed with enumHelper rightly. Corrected wrapping words for table records

--- a/src/View/nature-help/src/app/shared/styles/table-list.component.css
+++ b/src/View/nature-help/src/app/shared/styles/table-list.component.css
@@ -201,7 +201,7 @@
 }
 
 .grid-header div,
-.grid-row div {
+.grid-row div div {
   padding: 8px 5px;
   border-right: 1px solid #bbb;
   white-space: nowrap;
@@ -209,7 +209,7 @@
   text-overflow: ellipsis;
 }
 
-.grid-row div {
+.grid-row div div {
   white-space: wrap;
 }
 
